tests/phase_00_lexer_errors/invalid/01_unknown_character_dollar.hulk
// El lexer debe reportar $ como caracter desconocido y emitir UNKNOWN.
1 $ 2;
